# Span-Frappe-App

./: .gitignore  .pre-commit-config.yaml  HANDBOOK.md  README.md  license.txt  pyproject.toml
span/: api.py  hooks.py  patches.txt
span/fixtures/: custom_field.json  kanban_board.json  property_setter.json  span_discipline.json  workspace.json
span/patches/v0_1/: remove_billing_fields.py
span/pm/: span_skelet.json
span/pm/doctype/pain_point/: pain_point.json  pain_point.py
span/pm/doctype/requirement/: requirement.json  requirement.py
span/pm/doctype/requirement_link/: requirement_link.json  requirement_link.py
span/pm/doctype/requirement_source/: requirement_source.json  requirement_source.py
span/pm/doctype/span_discipline/: span_discipline.json  span_discipline.py
span/pm/doctype/span_task_discipline/: span_task_discipline.json  span_task_discipline.py
span/pm/print_format/span_scope_document/: span_scope_document.json
span/pm/report/span_coverage/: span_coverage.js  span_coverage.json  span_coverage.py
span/pm/report/span_overview/: span_overview.js  span_overview.json  span_overview.py
span/pm/workspace/span_pm/: span_pm.json
span/public/js/: project.js  task.js  task_list.js
span/tests/: test_fase2.py
span/translations/: nl.csv
