[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "span"
authors = [
    { name = "Impertio Studio", email = "dev@impertio.nl" }
]
description = "Agile projectmanagement (Project, Phase, Epic, Story, Task, Bug) en fase-gestuurde facturatie, native in ERPNext v16."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
